# coderouter-plugin-compress

./: .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CACHE_ALIGNER.md  CCR.md  architecture.md
scripts/: bench.py  integration_test.py
scripts/live/: providers.live.yaml  run_live.py  run_ollama_mac.sh  stub_upstream.py
src/coderouter_plugin_compress/: __init__.py  cache_aligner.py  ccr.py  config.py  filter.py  metering.py  observer.py  router.py  stats.py
src/coderouter_plugin_compress/crushers/: __init__.py  base.py  json_crush.py  log_crush.py  text_crush.py
tests/: conftest.py  test_cache_aligner.py  test_ccr_reexpand.py  test_config_ccr_metering.py  test_filter.py  test_json_crush.py  test_log_crush.py  test_router_and_text.py  test_tokens_saved_emit.py
