[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderouter-plugin-compress"
version = "0.2.0"
description = "Context-compression plugins for CodeRouter (headroom-inspired). Compresses tool_result blocks (JSON/log), reversible via CCR, plus an Anthropic prompt-cache aligner."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zephel01" }]
keywords = ["coderouter", "llm", "compression", "context", "plugin", "prompt-cache"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

# Core MVP is pure-Python, ZERO runtime dependencies (mirrors CodeRouter's
# 5-deps discipline). The plugin only duck-types the AnthropicRequest it
# receives from the engine — it does not import coderouter at runtime.
dependencies = []

[project.optional-dependencies]
# Optional precise token counting for metering (local tokenizer.json only,
# no network / no torch / no pickle) — same isolation rule as CodeRouter's
# `accuracy` extra.
accuracy = ["tokenizers>=0.15"]
# Optional AST-aware code compression (phase 4, not used by MVP).
code = ["tree-sitter>=0.21"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/zephel01/coderouter-plugin-compress"
Repository = "https://github.com/zephel01/coderouter-plugin-compress"
CodeRouter = "https://github.com/zephel01/CodeRouter"

# Entry points: the CodeRouter loader discovers these under the
# `coderouter.input_filter` / `coderouter.observer` groups and instantiates
# them as cls(**plugins.config[<name>]). They only activate when the user
# lists the name in plugins.enabled (opt-in allowlist).
[project.entry-points."coderouter.input_filter"]
compress = "coderouter_plugin_compress.filter:CompressInputFilter"
cache-align = "coderouter_plugin_compress.cache_aligner:CacheAlignInputFilter"

[project.entry-points."coderouter.observer"]
compress-stats = "coderouter_plugin_compress.observer:CompressionStatsObserver"

[tool.hatch.build.targets.wheel]
packages = ["src/coderouter_plugin_compress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put tests/ on sys.path so conftest + cross-test imports resolve without a
# PYTHONPATH=tests prefix.
pythonpath = ["tests"]
